# discord-bot

./: Cargo.toml  README.md  docker-compose.yml  dockerfile
.github/workflows/: rust.yml
src/: bot.rs  lib.rs  main.rs  util.rs
src/commands/: balance.rs  block.rs  hash.rs  height.rs  mod.rs  stake.rs  transaction.rs
