[package]
name = "tofuri-bot"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri discord bot"
repository = "https://github.com/tofuri/discord-bot"

[dependencies]
tofuri-core = "0.1.2"
tofuri-api-core = "0.1.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.28.1", features = ["full"] }
clap = { version = "4.2.7", features = ["derive", "env"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest = "0.11.18"
