[package]
name = "tofuri-bot"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Tofuri discord bot"
repository = "https://github.com/tofuri/discord-bot"

[dependencies]
tofuri-core = { git = "https://github.com/tofuri/tofuri" }
tofuri-api-core = { git = "https://github.com/tofuri/tofuri" }
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.28.2", features = ["full"] }
clap = { version = "4.3.2", features = ["derive", "env"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest = "0.11.18"
